--- a/k8s-deploy-svc.yml
+++ b/k8s-deploy-svc.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hello-cloud-app-deployment
+  name: hello-app-deployment
 spec:
   replicas: 2
   selector:
@@ -19,18 +19,18 @@ spec:
         - name: hello-cloud-app
           image: sai194/hello-cloud-app
           ports:
-           - name: hello-cloud-app-port
+           - name: app-port
              containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-cloud-app-service
+  name: hello-app-service
 spec:
   ports:
     - port: 8080
       nodePort: 31006
-      targetPort: hello-cloud-app-port
+      targetPort: app-port
       protocol: TCP
   selector:
     app: hello-cloud-app
